# cw-tokens

contracts/cw20-bank/: Cargo.toml  README.md
contracts/cw20-bank/examples/: schema.rs
contracts/cw20-bank/src/: contract.rs  error.rs  msg.rs  state.rs
