[package]
name = "cw20-bank"
version = "0.1.0"
authors = ["Venkatesh Mankena <mankenavenkatesh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cw-utils = { version = "0.13.2" }
cw2 = { version = "0.13.2" }
cw20 = { version = "0.13.2" }
cw-controllers = { version = "0.13.2" }
cw20-base = { version = "0.13.2", features = ["library"] }
cosmwasm-std = { version = "1.0.0-beta10", features = ["staking"] }
cw-storage-plus = { version = "0.13.2" }
injective-cosmwasm = { version = "0.1.30" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta10" }
